[package]
name = "wasm-tsify"
version = "0.1.0"
authors = ["kunjee17"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
tsify-next = "0"
serde = { version = "1", features = ["derive"] }
validator = { version = "0", features = ["derive"] }
anyhow = "1"
thiserror = "1"
gluesql = {version = "0" , default-features = false, features = ["idb-storage"]}
gloo = {version = "0"}
#rexie = {version = "0"}
#reqwest = {version = "0", features = ["json"]}
wasm-bindgen-futures = "0"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
